@@ -118,7 +118,10 @@ used with any command in a pipeline.
 
 55. New: pragma restriction( no_volatiles );
 
-56. New. os.last_child and equivalent $!.  Get the pid of the last child run in the background.
+56. New: os.last_child and equivalent $!.  Get the pid of the last child run in the background.
 
 57. Change: trailing whitespace is an error in backquote literals.
+
+58. New: pragma unchecked_volatile( var ) to create a volatile which is allowed in expressions (provided restriction( no_volatiles ) is not used).
+
 
